operate/include/deployment-importer-archiver.tpl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operate-importer-archiver
  labels:
    app.kubernetes.io/app: operate
    app.kubernetes.io/component: operate-importer-archiver
    app.kubernetes.io/tier: importer-archiver
  annotations:
    {}
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: operate-importer-archiver
  template:
    metadata:
      labels:
        app.kubernetes.io/app: operate
        app.kubernetes.io/component: operate-importer-archiver
    spec:
      imagePullSecrets:
        []
      containers:
      - name: operate-importer
        image: "camunda/operate:8.3.0-alpha3"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 600m
            memory: 400Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /operate/actuator/health/readiness
            scheme: HTTP
            port: http
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: config
          mountPath: /usr/local/operate/config/application.yml
          subPath: application.yml
      volumes:
      - name: config
        configMap:
          name: operate-configmap-importer-archiver
          defaultMode: 484
