operate/include/service-importer-archiver.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: operate-importer-archiver
  labels:
    app.kubernetes.io/component: operate-importer-archiver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: operate-importer-archiver
  ports:
    - name: http
      port: 8080
    - name: metrics
      port: 8081
