operate/include/service-webapp.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-operate
  labels:
    app.kubernetes.io/component: operate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: operate
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
