operate/include/camunda-ingress.tpl.yaml
---
# Source: camunda-platform/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-camunda-platform
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: YOUR_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
            path: /auth
            pathType: Prefix
          - backend:
              service:
                name: camunda-identity
                port:
                  number: 80
            path: /identity
            pathType: Prefix
#          - backend:
#              service:
#                name: camunda-operate
#                port:
#                  number: 80
#            path: /operate
#            pathType: Prefix
          - backend:
              service:
                name: camunda-optimize
                port:
                  number: 80
            path: /optimize
            pathType: Prefix
          - backend:
              service:
                name: camunda-tasklist
                port:
                  number: 80
            path: /tasklist
            pathType: Prefix
  tls:
    - hosts:
        - YOUR_HOSTNAME
      secretName: tls-secret
